# oop1_project

./: .codetogether.ignore  CMakeLists.txt  README.md  README.txt
cmake/: CompilerSettings.cmake  SFML.cmake  Zip.cmake
include/: Brain.h  CMakeLists.txt  GameBar.h  GameBoard.h  GameController.h  GameLevel.h  GameObject.h  LeaderBoard.h  Level.h  Menu.h  Object.h  Objects.h  ResourcesManager.h  Settings.h  SettingsManager.h  SettingsScreen.h  SoundFlip.h
include/events/: Event.h  eventLoop.h
include/objects/: CMakeLists.txt  GameObject.h
include/objects/DynamicObjects/: DynamicObject.h  Ghost.h  Pacman.h  pacmanState.h
include/objects/DynamicObjects/ghosts/: CMakeLists.txt  Ghost.h  RandomGhost.h  SmartGhost.h
include/objects/StaticObjects/: CMakeLists.txt  Cookie.h  Door.h  Gift.h  Key.h  StaticObject.h  Wall.h
include/objects/StaticObjects/Gift/: CMakeLists.txt  GhostFreezeGift.h  Gift.h  LifeIncGift.h  SuperPacGift.h  TimeAddGift.h
resources/: CMakeLists.txt  Consts.h  png
src/: Brain.cpp  CMakeLists.txt  GameBar.cpp  GameBoard.cpp  GameController.cpp  GameLevel.cpp  GameObject.cpp  LeaderBoard.cpp  Level.cpp  Menu.cpp  Object.cpp  Objects.cpp  ResourcesManager.cpp  Settings.cpp  SettingsManager.cpp  SettingsScreen.cpp  SoundFlip.cpp  main.cpp
src/events/: CMakeLists.txt  Event.cpp  eventLoop.cpp
src/objects/: CMakeLists.txt  GameObject.cpp
src/objects/DynamicObjects/: DynamicObject.cpp  Ghost.cpp  Pacman.cpp  pacmanState.cpp
src/objects/DynamicObjects/ghosts/: Ghost.cpp  RandomGhost.cpp  SmartGhost.cpp
src/objects/StaticObjects/: CMakeLists.txt  Cookie.cpp  Door.cpp  Gift.cpp  Key.cpp  StaticObject.cpp  Wall.cpp
src/objects/StaticObjects/Gift/: CMakeLists.txt  GhostFreezeGift.cpp  Gift.cpp  LifeIncGift.cpp  SuperPacGift.cpp  TimeAddGift.cpp
values/: Points.h  symbols.h
